codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_disabled_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Feedback upload is disabled
  Astral does not upload logs or feedback reports.

› 1. Close

  Press enter to confirm or esc to go back
