codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: snapshot
---
cells=2
• Bash task process-1 running · 0s
  └ just fix


■ Conversation interrupted - tell the model what to do differently.
