codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__memories_enable_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2163
expression: popup
---
  Enable memories?
  Memories are currently disabled in your config.

› 1. Yes, enable  Save the setting now. You will need a new session to use it.
  2. Not now      Keep memories disabled.

  Learn more: https://github.com/oines/astral-code/blob/main/codex-rs/memories/
  README.md
  Press enter to confirm or esc to go back
