codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2359
expression: popup
---
  Select Model and Effort
  Use astral -m <model_name> or config.toml for models outside this catalog.

› 1. test-visible-model (current)  test-visible-model description
  2. Providers                     Browse configured model providers

  Press enter to confirm or esc to go back
